--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,101 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>WheelAround Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
+  
+  <properties>
+		<spring.version>3.0.5.RELEASE</spring.version>
+	</properties>
+
+	<dependencies>
+
+		<!-- Spring 3 dependencies -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		 <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
-  <build>
-    <finalName>WheelAround</finalName>
-  </build>
+
+   <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+   		<groupId>commons-fileupload</groupId>
+  	 	<artifactId>commons-fileupload</artifactId>
+   		<version>1.2.1</version> <!-- makesure correct version here -->
+	</dependency>
+	
+	<dependency>
+   		<groupId>com.oracle</groupId>
+  	 	<artifactId>ojdbc6</artifactId>
+   		<version>11.2.0</version> <!-- makesure correct version here -->
+	</dependency>
+    
+	</dependencies>
+	<build>
+		<finalName>wheelAround</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.11.v20150529</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<webApp>
+						<contextPath>/wheelAround</contextPath>
+					</webApp>
+					<httpConnector>
+					<port>9999
+					</port>
+					</httpConnector>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+					<wtpversion>2.0</wtpversion>
+					<wtpContextName>wheelAround</wtpContextName>
+				</configuration>
+			</plugin>
+			
+		</plugins>
+		
+	</build>
+
 </project>
